--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1,4 +1,11 @@
-/*!
+.engine {
+	position: absolute;
+	text-indent: -2400px;
+	text-align: center;
+	padding: 0;
+	top: 0;
+	left: -2400px;
+}/*!
  * Mobirise v4 theme (https://mobirise.com/)
  * Copyright 2017 Mobirise
  */
@@ -627,11 +634,3 @@ nav .mbr-section-btn {
   margin: auto; }
 
 /*# sourceMappingURL=style.css.map */
-.engine {
-	position: absolute;
-	text-indent: -2400px;
-	text-align: center;
-	padding: 0;
-	top: 0;
-	left: -2400px;
-}
